--- a/style.css
+++ b/style.css
@@ -30,6 +30,14 @@ canvas {
     background-color: rgb(139, 150, 141);
 }
 
+#controler {
+    width: 700px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 button {
     width: 100px;
     height: 35px;
@@ -78,19 +86,19 @@ a {
 
 #gameStart {
     top: 188px;
-    left: calc((100vw / 2) - (716px / 2));
+    left: calc((100vw / 2) - (702px / 2));
     opacity: 1;
 }
 
 #winGame {
     top: 188px;
-    left: calc((100vw / 2) - (716px / 2));
+    left: calc((100vw / 2) - (702px / 2));
     opacity: 0;
 }
 
 #loseGame {
     top: 188px;
-    left: calc((100vw / 2) - (716px / 2));
+    left: calc((100vw / 2) - (702px / 2));
     opacity: 0;
 }
 
