--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ button {
 
 footer {
     background-color: rgba(128, 128, 128, 0.4);
-    margin-top: 50px;
+    width: 700px;
+    margin: 50px auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,19 +87,19 @@ a {
 
 #gameStart {
     top: 188px;
-    left: calc((100vw / 2) - (702px / 2));
+    left: calc((100vw / 2) - (716px / 2));
     opacity: 1;
 }
 
 #winGame {
     top: 188px;
-    left: calc((100vw / 2) - (702px / 2));
+    left: calc((100vw / 2) - (716px / 2));
     opacity: 0;
 }
 
 #loseGame {
     top: 188px;
-    left: calc((100vw / 2) - (702px / 2));
+    left: calc((100vw / 2) - (716px / 2));
     opacity: 0;
 }
 
